--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,14 +1,38 @@
 
-*, ::before, ::after {
-  box-sizing: border-box;
-}
+/* #region ========== DEFAULT */
+  *,
+  ::before,
+  ::after {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: var(--default);
+    font-size: 100%;
+    font-weight: 400;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    overflow: hidden auto;
+  }
+  * p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+  }
+/* #endregion ======= DEFAULT END */
 
-body {
-  font-family: var(--default);
-  font-size: 100%;
-  font-weight: 400;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: 0;
-}
+/* #region ========== SCROLLBAR */
+  *::-webkit-scrollbar {
+    height: 18px;
+    background-color: var(--white);
+  }
+  *::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  *::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(to top, #cfcfcf, lightgrey, #cfcfcf);
+    border: 4px solid transparent;
+    border-radius: 9px;
+    background-clip: content-box;
+  }
+/* #endregion ======= SCROLLBAR END*/
