--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 
 :root {
     /* #region ========== FONTS */
@@ -6,43 +7,15 @@
     /* #endregion ======= FONTS END */
 
     /* #region ========== WARNA */
-        --white: #fbfbfb;
-        --dark: #181818;
-        --lightdark: #1f1f1f;
+        --primary: #525CEB;
+        --white: #fbfbfb;      
+        --black: #181818;
+        --black-soft: #3D3B40;
+        --grey: #676767;
+        --border: #e1e1e1;
     /* #endregion ======= WARNA END*/
 
     /* #region ========== MIX */
         --anim: .25s ease;
     /* #endregion ======= MIX END*/
-
-
-
-    /* semantic color variables for this project */
-    /* :root {
-    --color-background: var(--vt-c-white);
-    --color-background-soft: var(--vt-c-white-soft);
-    --color-background-mute: var(--vt-c-white-mute);
-
-    --color-border: var(--vt-c-divider-light-2);
-    --color-border-hover: var(--vt-c-divider-light-1);
-
-    --color-heading: var(--vt-c-text-light-1);
-    --color-text: var(--vt-c-text-light-1);
-
-    --section-gap: 160px;
-    }
-
-    @media (prefers-color-scheme: dark) {
-    :root {
-        --color-background: var(--vt-c-black);
-        --color-background-soft: var(--vt-c-black-soft);
-        --color-background-mute: var(--vt-c-black-mute);
-
-        --color-border: var(--vt-c-divider-dark-2);
-        --color-border-hover: var(--vt-c-divider-dark-1);
-
-        --color-heading: var(--vt-c-text-dark-1);
-        --color-text: var(--vt-c-text-dark-2);
-    }
-    } */
 }
